--- a/PMS-PropertyHapa/Views/Auth/Index2.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/Index2.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
     Layout = "~/Views/Shared/_IdentityLayout.cshtml";
+    string username = ViewData["Username"] as string;
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -81,9 +82,9 @@
                     <div class="col-12">
                         <div class="landing-home-contain">
                             <div>
-                              
-                                <h2><span>Welcome to Property Happa</span></h2>
-                              @*   <p> Zeta is Perfect Admin template for any business. it has all features and modules to create your amazing C-panel. this template for selling Default, Crypto, Ecommerce etc......</p> *@
+
+                                <h2><span>Welcome, @username! to Property Happa</span></h2>
+                                @*   <p> Zeta is Perfect Admin template for any business. it has all features and modules to create your amazing C-panel. this template for selling Default, Crypto, Ecommerce etc......</p> *@
                             </div>
                         </div>
                     </div>
@@ -101,11 +102,7 @@
             </ul>
         </section>
         <!-- Container-fluid starts-->
-        <div class="container-fluid">
-            <div class="row justify-content-center" id="subscription-container">
-                <!-- Subscription blocks will be dynamically inserted here -->
-            </div>
-        </div>
+      
         <!-- unic-cards end-->
         <!--footer start-->
         <section class="landing-footer section-py-space" id="footer">
@@ -147,93 +144,3 @@
     <!-- Plugin used-->
 </body>
 </html>
-
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script>
-    $(document).ready(function () {
-        loadSubscriptions();
-
-        // Handle dynamic click events
-        $('#subscription-container').on('click', '.subscribe-btn', function () {
-            const subscriptionId = $(this).data('id');
-
-            if (isFree) {
-                window.location.href = '/Auth/Register'; 
-            } else {
-               
-                Swal.fire({
-                    icon: 'success',
-                    position: 'top-end',
-                    showConfirmButton: false,
-                    timer: 3000,
-                    timerProgressBar: true,
-                    toast: true,
-                    width: '300px',
-                    padding: '0.5rem',
-                    title: 'Processing your Subscription.'
-                });
-            }
-        });
-    });
-
-    function loadSubscriptions() {
-        $.get('/Subscription/GetAllSubscriptions', function (response) {
-            if (response.success && Array.isArray(response.data)) {
-                const container = $('#subscription-container');
-                response.data.forEach(sub => {
-                    container.append(createSubscriptionBlock(sub));
-                });
-            } else {
-                console.error('Failed to load subscriptions:', response.message);
-            }
-        });
-    }
-
-    function createSubscriptionBlock(subscription) {
-        return `
-            <div class="col-xl-3 col-sm-6 xl-50 box-col-6">
-                <div class="pricing-block card text-center">
-                    <div class="pricing-header">
-                        <h2>${subscription.Name}</h2>
-                        <div class="price-box">
-                            <div>
-                                <h3>$${subscription.Price}</h3>
-                                <p>/ month</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pricing-list">
-                        <ul class="pricing-inner">
-                            <li>
-                                <h6>${subscription.DiskSpaceGB}GB<span> Disk Space</span></h6>
-                            </li>
-                            <li>
-                                <h6>${subscription.EmailAccounts}<span> Email Accounts</span></h6>
-                            </li>
-                            <li>
-                                <h6>${subscription.BandwidthGB}GB<span> Bandwidth</span></h6>
-                            </li>
-                            <li>
-                                <h6>${subscription.Subdomains}<span> Subdomains</span></h6>
-                            </li>
-                            <li>
-                                <h6>${subscription.Domains}<span> Domains</span></h6>
-                            </li>
-                        </ul>
-                        <button class="btn btn-primary btn-lg" onclick="handleSubscriptionClick(${subscription.Price}, '${subscription.Id}', '${subscription.Name}')" type="button">Subscribe</button>
-                    </div>
-                </div>
-            </div>`;
-    }
-
-    function handleSubscriptionClick(price, id, name) {
-        if (price === 0) {
-            
-            window.location.href = `/Auth/Register?subscription=${encodeURIComponent(name)}`;
-        } else {
-           
-        }
-    }
-</script>
