--- a/PMS-PropertyHapa/Views/Shared/_IdentityLayout.cshtml
+++ b/PMS-PropertyHapa/Views/Shared/_IdentityLayout.cshtml
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
     <meta name="author" content="pixelstrap">
     <link rel="icon" href="~/Dashboard/assets/images/logo/favicon-icon.png" type="image/x-icon">
     <link rel="shortcut icon" href="~/Dashboard/assets/images/logo/favicon-icon.png" type="image/x-icon">
-    <title>Property Hapa</title>
+    <title>Property Happa</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -25,6 +25,8 @@
     <!-- Feather icon-->
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/feather-icon.css">
     <!-- Plugins css start-->
+    <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/animate.css">
+    <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/owlcarousel.css">
     <!-- Plugins css Ends-->
     <!-- Bootstrap css-->
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/vendors/bootstrap.css">
@@ -33,65 +35,106 @@
     <link id="color" rel="stylesheet" href="~/Dashboard/assets/css/color-1.css" media="screen">
     <!-- Responsive css-->
     <link rel="stylesheet" type="text/css" href="~/Dashboard/assets/css/responsive.css">
-  </head>
-  <body>
+</head>
+<body>
     <!-- Loader starts-->
     <div class="loader-wrapper">
-      <div class="loader">
-        <div class="loader-bar"></div>
-        <div class="loader-bar"></div>
-        <div class="loader-bar"></div>
-        <div class="loader-bar"></div>
-        <div class="loader-bar"></div>
-        <div class="loader-ball"></div>
-      </div>
+        <div class="loader">
+            <div class="loader-bar"></div>
+            <div class="loader-bar"></div>
+            <div class="loader-bar"></div>
+            <div class="loader-bar"></div>
+            <div class="loader-bar"></div>
+            <div class="loader-ball"></div>
+        </div>
     </div>
     <!-- Loader ends-->
+    <!-- tap on top starts-->
+    <div class="tap-top"><i data-feather="chevrons-up"></i></div>
+    <!-- tap on tap ends-->
     <!-- page-wrapper Start-->
-    <section>
+    <div class="page-wrapper compact-wrapper" id="pageWrapper">
      
-                @RenderBody()
+        <!-- Page Header Ends -->
+        <!-- Page Body Start-->
+        <div class="page-body-wrapper">
 
-    </section>
-    <!-- page-wrapper end-->
-    <script>
-      (function() {
-      'use strict';
-      window.addEventListener('load', function() {
-      // Fetch all the forms we want to apply custom Bootstrap validation styles to
-      var forms = document.getElementsByClassName('needs-validation');
-      // Loop over them and prevent submission
-      var validation = Array.prototype.filter.call(forms, function(form) {
-      form.addEventListener('submit', function(event) {
-      if (form.checkValidity() === false) {
-      event.preventDefault();
-      event.stopPropagation();
-      }
-      form.classList.add('was-validated');
-      }, false);
-      });
-      }, false);
-      })();
-    </script>
-    <!-- latest jquery-->
-    <script src="~/Dashboard/assets/js/jquery-3.5.1.min.js"></script>
-    <!-- Bootstrap js-->
-    <script src="~/Dashboard/assets/js/bootstrap/bootstrap.bundle.min.js"></script>
-    <!-- feather icon js-->
-    <script src="~/Dashboard/assets/js/icons/feather-icon/feather.min.js"></script>
-    <script src="~/Dashboard/assets/js/icons/feather-icon/feather-icon.js"></script>
-    <!-- scrollbar js-->
-    <!-- Sidebar jquery-->
-    <script src="~/Dashboard/assets/js/config.js"></script>
-    <!-- Plugins JS start-->
-    <!-- Plugins JS Ends-->
-    <!-- Theme js-->
-    <script src="~/Dashboard/assets/js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.4/dist/sweetalert2.all.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
+            @RenderBody()
+        </div>
 
-    <!-- login js-->
-    <!-- Plugin used-->
-    @RenderSection("Scripts", required: false)
-  </body>
-</html>
+    </div>
+  
+    <!-- footer start-->
+    <footer class="footer">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12 footer-copyright text-center">
+                    <p class="mb-0" id="companyname"></p>
+                </div>
+            </div>
+        </div>
+    </footer>
+  
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title" id="exampleModalCenterTitle">Change Organization Info</h3>
+                    <button type="button" onclick="closeModal()" aria-label="close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- Form for TenantOrganizationInfoDTO -->
+                    <form id="tenantOrganizationInfoForm">
+                        <div class="form-group">
+                            <label for="organizationName">Organization Name</label>
+                            <input type="text" class="form-control" id="organizationName" name="organizationName" placeholder="Enter organization name">
+                        </div>
+                        <div class="form-group">
+                            <label for="organizationDescription">Organization Description</label>
+                            <textarea class="form-control" id="organizationDescription" name="organizationDescription" rows="3" placeholder="Enter organization description"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="organizationPrimaryColor">Organization Primary Color</label>
+                            <input type="color" class="form-control" id="organizationPrimaryColor" name="organizationPrimaryColor">
+                        </div>
+                        <div class="form-group">
+                            <label for="organizationSecondaryColor">Organization Secondary Color</label>
+                            <input type="color" class="form-control" id="organizationSecondaryColor" name="organizationSecondaryColor">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" onclick="closeModal()" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-success" onclick="saveTenantOrganizationInfo()">Save Changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    </body>
+    </html>
+<!-- latest jquery-->
+<script src="~/Dashboard/assets/js/jquery-3.5.1.min.js"></script>
+<!-- Bootstrap js-->
+<script src="~/Dashboard/assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+<!-- feather icon js-->
+<script src="~/Dashboard/assets/js/icons/feather-icon/feather.min.js"></script>
+<script src="~/Dashboard/assets/js/icons/feather-icon/feather-icon.js"></script>
+<!-- scrollbar js-->
+<!-- Sidebar jquery-->
+<script src="~/Dashboard/assets/js/config.js"></script>
+<!-- Plugins JS start-->
+<script src="~/Dashboard/assets/js/animation/scroll-reveal/scrollreveal.min.js"></script>
+<script src="~/Dashboard/assets/js/modernizr.js"></script>
+<script src="~/Dashboard/assets/js/animation/scroll-reveal/reveal-custom.js"></script>
+<script src="~/Dashboard/assets/js/owlcarousel/owl.carousel.js"></script>
+<script src="~/Dashboard/assets/js/owlcarousel/owl-custom.js"></script>
+<script src="~/Dashboard/assets/js/animation/wow/wow.min.js"></script>
+<script src="~/Dashboard/assets/js/landing_sticky.js"></script>
+<script src="~/Dashboard/assets/js/landing.js"></script>
+<!-- Plugins JS Ends-->
+<!-- Theme js-->
+<script src="~/Dashboard/assets/js/script.js"></script>
+<!-- login js-->
+<!-- Plugin used-->
